Update package name to dasein-core for PyPI release

--- a/examples/dasein_examples.ipynb
+++ b/examples/dasein_examples.ipynb
@@ -39,7 +39,7 @@
       "outputs": [],
       "source": [
         "# Install Dasein and dependencies\n",
-        "!pip install -q dasein\n",
+        "!pip install -q dasein-core\n",
         "\n",
         "# For browser agent example (Use Case 2)\n",
         "!pip install -q playwright\n",
