Add prominent Colab badge to README and update to gemini-2.5-flash

--- a/examples/dasein_examples.ipynb
+++ b/examples/dasein_examples.ipynb
@@ -137,7 +137,7 @@
         "# Set up SQL agent\n",
         "print(\"Setting up SQL agent...\")\n",
         "db = SQLDatabase.from_uri(f\"sqlite:///{db_path}\")\n",
-        "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash-exp\", temperature=0)\n",
+        "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", temperature=0)\n",
         "toolkit = SQLDatabaseToolkit(db=db, llm=llm)\n",
         "agent = create_sql_agent(llm=llm, toolkit=toolkit, verbose=True, handle_parsing_errors=True)\n",
         "\n",
@@ -224,7 +224,7 @@
         "    \n",
         "    # Create LLM\n",
         "    llm = ChatGoogleGenerativeAI(\n",
-        "        model=\"gemini-2.0-flash-exp\",\n",
+        "        model=\"gemini-2.5-flash\",\n",
         "        temperature=0,\n",
         "        request_timeout=180,\n",
         "        max_retries=2\n",
@@ -358,10 +358,10 @@
         "    \n",
         "    # Configure with Gemini models and Tavily search\n",
         "    config = Configuration(\n",
-        "        summarization_model=\"gemini-2.0-flash-exp\",\n",
-        "        research_model=\"gemini-2.0-flash-exp\",\n",
-        "        compression_model=\"gemini-2.0-flash-exp\",\n",
-        "        final_report_model=\"gemini-2.0-flash-exp\",\n",
+        "        summarization_model=\"gemini-2.5-flash\",\n",
+        "        research_model=\"gemini-2.5-flash\",\n",
+        "        compression_model=\"gemini-2.5-flash\",\n",
+        "        final_report_model=\"gemini-2.5-flash\",\n",
         "        allow_clarification=False,\n",
         "        max_concurrent_research_units=2,\n",
         "        max_researcher_iterations=4,\n",
@@ -384,7 +384,7 @@
         "    print(\"  4. Report Writing\\n\")\n",
         "    \n",
         "    # Add LLM reference for Dasein\n",
-        "    graph.llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash-exp\", temperature=0)\n",
+        "    graph.llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", temperature=0)\n",
         "    \n",
         "    return graph\n",
         "\n",
@@ -432,8 +432,8 @@
         "    config={\n",
         "        \"configurable\": {\n",
         "            \"allow_clarification\": False,\n",
-        "            \"summarization_model\": \"gemini-2.0-flash-exp\",\n",
-        "            \"research_model\": \"gemini-2.0-flash-exp\",\n",
+        "            \"summarization_model\": \"gemini-2.5-flash\",\n",
+        "            \"research_model\": \"gemini-2.5-flash\",\n",
         "        }\n",
         "    }\n",
         ")\n",
