--- a/examples/dasein_examples.ipynb
+++ b/examples/dasein_examples.ipynb
@@ -76,7 +76,9 @@
         "# Suppress warnings\n",
         "os.environ[\"GOOGLE_CLOUD_DISABLE_DIRECT_PATH\"] = \"true\"\n",
         "\n",
-        "print(\"✅ API keys configured\")\n"
+        "print(\"✅ API keys configured\")\n",
+        "print(\"\\n⚠️ Note: You may see dependency warnings in Colab - these are safe to ignore.\")\n",
+        "print(\"⚠️ Note: Brief timeout warnings on first run are normal (cold start) - services will activate automatically.\")\n"
       ]
     },
     {
