--- a/examples/dasein_examples.ipynb
+++ b/examples/dasein_examples.ipynb
@@ -259,7 +259,7 @@
         ")\n",
         "\n",
         "# Test query\n",
-        "query = \"Go to https://python.langchain.com and find if there's a tutorial on creating a browsing agent.\"\n",
+        "query = \"avigate to https://python.langchain.com and find the main headers on the website. What are the main navigation sections?\"\n",
         "\n",
         "print(f\"\\nQuery: {query}\\n\")\n",
         "print(\"=\" * 70)\n",
