--- a/examples/dasein_examples.ipynb
+++ b/examples/dasein_examples.ipynb
@@ -259,7 +259,7 @@
         ")\n",
         "\n",
         "# Test query\n",
-        "query = \"avigate to https://python.langchain.com and find the main headers on the website. What are the main navigation sections?\"\n",
+        "query = \"Go to the LangChain site (https://python.langchain.com). Is there a tutorial on how to create a browsing agent? If so where is it?\"\n",
         "\n",
         "print(f\"\\nQuery: {query}\\n\")\n",
         "print(\"=\" * 70)\n",
