sql agent handle parsing error fiz

--- a/examples/dasein_examples.ipynb
+++ b/examples/dasein_examples.ipynb
@@ -141,7 +141,7 @@
         "db = SQLDatabase.from_uri(f\"sqlite:///{db_path}\")\n",
         "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", temperature=0)\n",
         "toolkit = SQLDatabaseToolkit(db=db, llm=llm)\n",
-        "agent = create_sql_agent(llm=llm, toolkit=toolkit, verbose=True, handle_parsing_errors=True)\n",
+        "agent = create_sql_agent(llm=llm, toolkit=toolkit, verbose=True, agent_executor_kwargs={'handle_parsing_errors': True})\n",
         "\n",
         "print(\"✅ SQL agent created\")\n"
       ]
